--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -8,6 +8,8 @@
     <%= link_to 'New room', new_room_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
+  <%# The next line uses turbo treams (along with the "broadcast_to" method in the "room" model) to allow the list of available rooms to update live from a user's view without refreshing the page %>
+  <%= turbo_stream_from "rooms_list" %>
   <div id="rooms" class="min-w-full">
     <%= render @rooms %>
   </div>
